--- a/aboutus.html
+++ b/aboutus.html
@@ -15,5 +15,34 @@
             </div>    
             <div id="search" class="bar"></div>
         </div>
+        <div id="people">
+            <div class="huang"></div>
+            <div class="lu"></div>
+            <div class="shen"></div>
+            <div class="tu"></div>;
+            <div class="zhuang"></div>
+        </div>
+        <div id="information">
+            <div class="mot">
+                  <p>Meet Our Team</p>
+            </div>
+            <div class="info">
+                  <p>Lorem upsum dolor sit amet,consectetur adipiscing elit. Donec pretium</p>
+                  <p>ante ert, vitae sodales mi varius quis. Etiam vestibulum lorem vel urna</p> 
+                  <p>tempor, eu fermentum odio aliquam.</p>
+            </div>
+            <div class="cu"></div>
+        </div>
+        <div id="bottom">
+            <div class="copyright">
+                  <p>Copyright 2022 PiggyPal.Inc.</p>
+            </div>
+            <div class="privacy">
+                  <p>Privacy Policy</p>
+            </div>
+            <div class="security">
+                  <p>Security</p>
+            </div>
+        </div>
     </body>
 </html>
