--- a/aboutus.html
+++ b/aboutus.html
@@ -26,6 +26,7 @@
             <div class="mot">
                   <p>Meet Our Team</p>
             </div>
+            <div class="line"></div>
             <div class="info">
                   <p>Lorem upsum dolor sit amet,consectetur adipiscing elit. Donec pretium</p>
                   <p>ante ert, vitae sodales mi varius quis. Etiam vestibulum lorem vel urna</p> 
@@ -34,15 +35,9 @@
             <div class="cu"></div>
         </div>
         <div id="bottom">
-            <div class="copyright">
-                  <p>Copyright 2022 PiggyPal.Inc.</p>
-            </div>
-            <div class="privacy">
-                  <p>Privacy Policy</p>
-            </div>
-            <div class="security">
-                  <p>Security</p>
-            </div>
+          <p>Copyright 2022 PiggyPal,Inc.<br>
+          <a href="https://en.wikipedia.org/wiki/Privacy_policy">Privacy Policy</a>
+          &emsp;&emsp;<a href="https://en.wikipedia.org/wiki/security">Security</a></p>
         </div>
     </body>
 </html>
