--- a/aboutus.html
+++ b/aboutus.html
@@ -7,12 +7,12 @@
     <body>
         <div id="navbar">
             <div id="logo" class="button"></div>
-            <div class="button"><p>PiggyPal</p></div>
-            <div class="button">
-                <p>Home</p>
-                <p>Project</p>
-                <p>About Us</p>
-            </div>    
+            <div class="word">
+                <p id="name" class="button" >PiggyPal</p>
+                <p id="home" class="button">Home</p>
+                <p id="project" class="button">Project</p>
+                <p id="aboutus" class="button">About Us</p>
+            </div>
             <div id="search" class="bar"></div>
         </div>
         <div id="people">
