--- a/aboutus.html
+++ b/aboutus.html
@@ -15,12 +15,14 @@
             </div>
             <div id="search" class="bar"></div>
         </div>
-        <div id="people">
-            <div class="huang"></div>
-            <div class="lu"></div>
-            <div class="shen"></div>
-            <div class="tu"></div>;
-            <div class="zhuang"></div>
+        <div class="pic">
+            <div id="zhuang"    class="people"></div>
+            <div id="lu"        class="people"></div>
+            <div id="shen"      class="people"></div>
+            <div id="huang"     class="people"></div>
+            <div id="tu"        class="people"></div>
+            <div id="arrow-left"  onclick="rotate(false)"></div>
+            <div id="arrow-right" onclick="rotate(true)"></div>
         </div>
         <div id="information">
             <div class="mot">
