--- a/aboutus.html
+++ b/aboutus.html
@@ -16,11 +16,17 @@
             <div id="search" class="bar"></div>
         </div>
         <div class="pic">
+            <!--img id="zhuang"    class="people" src="./img/nameCard/Zhuang.png"></img>
+            <img id="lu"        class="people" src="./img/nameCard/Lu.png"></img>
+            <img id="shen"      class="people" src="./img/nameCard/Shen.png"></img>
+            <img id="huang"     class="people" src="./img/nameCard/Huang.png"></img>
+            <img id="tu"        class="people" src="./img/nameCard/Tu.png"></img-->
             <div id="zhuang"    class="people"></div>
             <div id="lu"        class="people"></div>
             <div id="shen"      class="people"></div>
             <div id="huang"     class="people"></div>
             <div id="tu"        class="people"></div>
+            
             <div id="arrow-left"  onclick="rotate(false)"></div>
             <div id="arrow-right" onclick="rotate(true)"></div>
         </div>
