html and css done 4/4 4:20

--- a/aboutus.html
+++ b/aboutus.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="./style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
@@ -15,36 +16,32 @@
             </div>
             <div id="search" class="bar"></div>
         </div>
+
         <div class="pic">
-            <!--img id="zhuang"    class="people" src="./img/nameCard/Zhuang.png"></img>
-            <img id="lu"        class="people" src="./img/nameCard/Lu.png"></img>
-            <img id="shen"      class="people" src="./img/nameCard/Shen.png"></img>
-            <img id="huang"     class="people" src="./img/nameCard/Huang.png"></img>
-            <img id="tu"        class="people" src="./img/nameCard/Tu.png"></img-->
-            <div id="zhuang"    class="people"></div>
             <div id="lu"        class="people"></div>
             <div id="shen"      class="people"></div>
+            <div id="zhuang"    class="people"></div>
             <div id="huang"     class="people"></div>
             <div id="tu"        class="people"></div>
             
             <div id="arrow-left"  onclick="rotate(false)"></div>
             <div id="arrow-right" onclick="rotate(true)"></div>
         </div>
+
         <div id="information">
-            <div class="mot">
-                  <p>Meet Our Team</p>
-            </div>
+            <p id="mot">Meet Our Team</p>
             <div class="line"></div>
-            <div class="info">
-                  <p>Lorem upsum dolor sit amet,consectetur adipiscing elit. Donec pretium</p>
-                  <p>ante ert, vitae sodales mi varius quis. Etiam vestibulum lorem vel urna</p> 
-                  <p>tempor, eu fermentum odio aliquam.</p>
+            <div class="info_box">
+                  <p class="info">Lorem upsum dolor sit amet,consectetur adipiscing elit. Donec pretium</p>
+                  <p class="info">ante ert, vitae sodales mi varius quis. Etiam vestibulum lorem vel urna</p> 
+                  <p class="info">tempor, eu fermentum odio aliquam.</p>
             </div>
             <div class="cu"></div>
         </div>
+
         <div id="bottom">
-          <p>Copyright 2022 PiggyPal,Inc.<br>
-          <a href="https://en.wikipedia.org/wiki/Privacy_policy">Privacy Policy</a>
+          <p class="notice">Copyright 2022 PiggyPal,Inc.</p>
+          <p class="notice"><a href="https://en.wikipedia.org/wiki/Privacy_policy">Privacy Policy</a>
           &emsp;&emsp;<a href="https://en.wikipedia.org/wiki/security">Security</a></p>
         </div>
     </body>
