part1 done 4/5 4:50am

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <div id="navbar">
-            <div id="logo" class="button"></div>
+            <div id="logo"></div>
             <div class="word">
-                <p id="name" class="button" >PiggyPal</p>
+                <p id="name">PiggyPal</p>
                 <p id="home" class="button">Home</p>
                 <p id="project" class="button">Project</p>
                 <p id="aboutus" class="button">About Us</p>
@@ -18,14 +18,14 @@
         </div>
 
         <div class="pic">
-            <div id="lu"        class="people"></div>
+            <div id="tu"        class="people"></div>
             <div id="shen"      class="people"></div>
             <div id="zhuang"    class="people"></div>
             <div id="huang"     class="people"></div>
-            <div id="tu"        class="people"></div>
+            <div id="lu"        class="people"></div>
             
-            <div id="arrow-left"  onclick="rotate(false)"></div>
-            <div id="arrow-right" onclick="rotate(true)"></div>
+            <div id="arrow-left"></div>
+            <div id="arrow-right"></div>
         </div>
 
         <div id="information">
@@ -36,12 +36,16 @@
                   <p class="info">ante ert, vitae sodales mi varius quis. Etiam vestibulum lorem vel urna</p> 
                   <p class="info">tempor, eu fermentum odio aliquam.</p>
             </div>
-            <div class="cu"></div>
+        </div>
+
+        <div class="group">
+            <div class="group_pic"></div>
+            <div class="cu"><a href="mailto:wyes9830119@gmail.com"></a></div>
         </div>
 
         <div id="bottom">
-          <p class="notice">Copyright 2022 PiggyPal,Inc.</p>
-          <p class="notice"><a href="https://en.wikipedia.org/wiki/Privacy_policy">Privacy Policy</a>
+          <p>Copyright © 2022 PiggyPal,Inc.</p>
+          <p><a href="https://en.wikipedia.org/wiki/Privacy_policy">Privacy Policy</a>
           &emsp;&emsp;<a href="https://en.wikipedia.org/wiki/security">Security</a></p>
         </div>
     </body>
