about us final 4/8 2:22am

--- a/aboutus.html
+++ b/aboutus.html
@@ -3,21 +3,33 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="./img/btn/piggyPal_logo.png" type="image/x-icon">
         <link href="./style.css" rel="stylesheet" type="text/css">
+        <title>PiggyPal | About Us</title>
     </head>
     <body>
         <div id="navbar">
             <div id="logo"></div>
             <div class="word">
                 <p id="name">PiggyPal</p>
-                <p id="home" class="button">Home</p>
-                <p id="project" class="button">Project</p>
-                <p id="aboutus" class="button">About Us</p>
+                <div id="box1" class="box">
+                    <p id="home" class="button">Home</p>
+                    <div class="underline"></div>
+                </div>
+                <div id="box2" class="box">
+                    <p id="project" class="button">Project</p>
+                    <div class="underline"></div>
+                </div>
+                <div id="box3" class="box">
+                    <p id="aboutus" class="button">About Us</p>
+                    <div class="underline"></div>
+                </div>
             </div>
             <div id="search" class="bar"></div>
         </div>
 
         <div class="pic">
+            <div id="head_back" class="people"></div>
             <div id="head" class="people"></div>
 
             <div id="tu_back"    class="people"></div>
@@ -35,6 +47,7 @@
             <div id="lu_back"    class="people"></div>
             <div id="lu"    class="people"></div>
 
+            <div id="tail_back" class="people"></div>
             <div id="tail" class="people"></div>
               
             
@@ -46,15 +59,13 @@
             <p id="mot">Meet Our Team</p>
             <div class="line"></div>
             <div class="info_box">
-                  <p class="info">Lorem upsum dolor sit amet,consectetur adipiscing elit. Donec pretium</p>
-                  <p class="info">ante ert, vitae sodales mi varius quis. Etiam vestibulum lorem vel urna</p> 
-                  <p class="info">tempor, eu fermentum odio aliquam.</p>
+                  <p class="info">PiggyPal是一個由來自不同科系的夥伴跨域協作的理財app，期待能在未來碰撞出更多的火花，也歡迎大家多多關注並支持PiggyPal</p>
             </div>
         </div>
 
         <div class="group">
             <div class="group_pic"></div>
-            <div class="cu"><a href="mailto:wyes9830119@gmail.com"></a></div>
+            <div class="cu"><a href="mailto:piggypalofficial@gmail.com"></a></div>
         </div>
 
         <div id="bottom">
